# KCalculator

./: CMakeLists.txt  DisplayTest.qml  DisplayTest.qmlc  KCalcButton.qml  KCalcButton.qmlc  KCalculator.kdev4  README.md  kcalc.cpp  kcalc.h  kcalcdisplay.cpp  kcalcdisplay.h  main.cpp  main.qml  main.qmlc  qml.qrc
